Validation improvements and custom labels

--- a/force-app/main/default/classes/stoHelperClass.cls
+++ b/force-app/main/default/classes/stoHelperClass.cls
@@ -7,17 +7,16 @@ public with sharing class stoHelperClass {
     public static List<STO_Category__mdt> getThemes(String language) {
         System.debug(language);
         String lang;
-        if(language.equals('no')){
+        if (language.equals('no')) {
             lang = 'Norwegian';
-        }
-        else if(language.equals('en-US')){
+        } else if (language.equals('en-US')) {
             lang = 'English';
         }
-        
+
         return [
             SELECT Id, Label, STODescription__c, STOSort_Order__c
             FROM STO_Category__mdt
-            WHERE STOLanguage__c =: lang
+            WHERE STOLanguage__c = :lang
             ORDER BY STOSort_Order__c ASC
         ];
     }
@@ -28,12 +27,11 @@ public with sharing class stoHelperClass {
      */
     @AuraEnabled
     public static Id createRequest(String theme, String msgText) {
-    
         //Create case Record and insert it
         Case c = createCase(theme);
         Thread__c thread = createThread(c, theme);
         createMessage(thread, msgText);
-       
+
         return thread.Id;
     }
 
@@ -44,27 +42,25 @@ public with sharing class stoHelperClass {
      * @Date 08.06.2021
      */
     @TestVisible
-    private static Case createCase(String theme){
+    private static Case createCase(String theme) {
         Database.DMLOptions dmlOpts = new Database.DMLOptions();
         dmlOpts.assignmentRuleHeader.UseDefaultRule = true;
 
         Case c = new Case();
         c.Subject = 'Skriv til oss - ' + theme; //TODO: Handle Language changes
         c.Origin = 'Web';
-        
+
         List<User> uList = [SELECT Id, AccountId FROM User WHERE Id = :UserInfo.getUserId()];
         c.AccountId = uList.get(0).AccountId;
 
         //Invoke assignment rules
         c.setOptions(dmlOpts);
-        try{
+        try {
             insert c;
-        }
-        catch(DmlException e){
+        } catch (DmlException e) {
             LoggerUtility logger = new LoggerUtility('Skriv til oss');
             logger.exception(e);
             logger.publish();
-            
         }
         return c;
     }
@@ -74,17 +70,15 @@ public with sharing class stoHelperClass {
      * @date 08.06.2021
      */
     @TestVisible
-    private static Thread__c createThread(Case c, String theme){
-        
+    private static Thread__c createThread(Case c, String theme) {
         Thread__c thread = new Thread__c();
         thread.CRM_Related_Object__c = c.Id;
         thread.CRM_isPublic__c = true;
         thread.CRM_From__c = UserInfo.getUserId();
         thread.Name = 'Skriv til oss - ' + theme;
-        try{
+        try {
             insert thread;
-        }
-        catch(DmlException e){
+        } catch (DmlException e) {
             LoggerUtility logger = new LoggerUtility('Skriv til oss');
             logger.exception(e);
             logger.publish();
@@ -92,20 +86,18 @@ public with sharing class stoHelperClass {
         return thread;
     }
     @TestVisible
-    private static void createMessage(Thread__c t, String msgText){
-        
+    private static void createMessage(Thread__c t, String msgText) {
         Message__c msg = new Message__c();
         msg.CRM_Message_Text__c = msgText;
         msg.CRM_From__c = UserInfo.getUserId();
         msg.CRM_Thread__c = t.Id;
-        try{
+        try {
             insert msg;
-        }
-        catch(DmlException e){
+        } catch (DmlException e) {
             LoggerUtility logger = new LoggerUtility('Skriv til oss');
             logger.exception(e);
             logger.publish();
-        }    
+        }
     }
     /**
      * Get all threads. Utilize sharing sets to filter the correct messages
@@ -116,7 +108,7 @@ public with sharing class stoHelperClass {
         List<Thread__c> threadList = [
             SELECT Id, Name, LastModifiedDate, CRM_Number_of_unread_Messages__c, CRM_Latest_Message_Datetime__c
             FROM Thread__c
-            ORDER BY Latest_Message_Datetime__c DESC
+            ORDER BY CRM_Latest_Message_Datetime__c DESC
         ];
         return threadList;
     }
