--- a/force-app/main/default/classes/stoHelperClass.cls
+++ b/force-app/main/default/classes/stoHelperClass.cls
@@ -1,4 +1,8 @@
 public with sharing class stoHelperClass {
+    private static final String STO_CASE_RECORD_TYPE = Schema.SObjectType.Case.getRecordTypeInfosByDeveloperName()
+        .get('STO_Case')
+        .getRecordTypeId();
+    private static final LoggerUtility logger = new LoggerUtility('Skriv til oss');
     /**
      * Get themes from custom metadata
      * @Author Lars Petter Johnsen
@@ -27,12 +31,36 @@ public with sharing class stoHelperClass {
      */
     @AuraEnabled
     public static Id createRequest(String theme, String msgText) {
-        //Create case Record and insert it
-        Case c = createCase(theme);
-        Thread__c thread = createThread(c, theme);
+        String relatedObjId;
+
+        User personUser = [
+            SELECT Account.CRM_Person__r.INT_IsNavEmployee__c, Account.CRM_Person__r.INT_Confidential__c
+            FROM User
+            WHERE Id = :UserInfo.getUserId()
+        ];
+
+        if (isCaseRouting(personUser)) {
+            //Create case Record and insert it
+            relatedObjId = createCase(theme, personUser.AccountId).Id;
+        } else {
+            relatedObjId = createNavTask(theme, personUser.AccountId).Id;
+        }
+        Thread__c thread = createThread(relatedObjId, theme);
         createMessage(thread, msgText);
 
         return thread.Id;
+    }
+
+    /**
+     * @description: Defines logic if the incoming message should be routed via Case or if routing via NavTask__c is to be performed
+     * @author Stian Ruud Schikora | 07-23-2021
+     * @return Boolean
+     **/
+    private static Boolean isCaseRouting(User usr) {
+        Boolean caseRouting = true;
+
+        //Do necessary checks on confidential and NAV employee to determine the outcome
+        return caseRouting;
     }
 
     /**
@@ -42,45 +70,52 @@ public with sharing class stoHelperClass {
      * @Date 08.06.2021
      */
     @TestVisible
-    private static Case createCase(String theme) {
+    private static Case createCase(String theme, String accountId) {
         Database.DMLOptions dmlOpts = new Database.DMLOptions();
         dmlOpts.assignmentRuleHeader.UseDefaultRule = true;
 
-        Case c = new Case();
-        c.Subject = 'Skriv til oss - ' + theme;
-        c.STO_Category__c = theme;
-        c.Origin = 'Web';
+        Case casy = new Case();
+        casy.Subject = 'Skriv til oss - ' + theme;
+        casy.STO_Category__c = theme;
+        casy.Origin = 'Web';
+        casy.RecordTypeId = STO_CASE_RECORD_TYPE;
 
-        List<User> uList = [SELECT Id, AccountId FROM User WHERE Id = :UserInfo.getUserId()];
-        c.AccountId = uList.get(0).AccountId;
+        casy.AccountId = accountId;
 
         //Invoke assignment rules
-        c.setOptions(dmlOpts);
+        casy.setOptions(dmlOpts);
         try {
-            insert c;
+            insert casy;
         } catch (DmlException e) {
-            LoggerUtility logger = new LoggerUtility('Skriv til oss');
             logger.exception(e);
             logger.publish();
         }
-        return c;
+        return casy;
     }
+
+    private static NavTask__c createNavTask(String theme, String accountId) {
+        //Generate a NavTask that is to be routed via oppgave with the correct external reference to thread so that it can be viewed correctly in Modia
+        //TODO expand with needed information for correct routing
+        NavTask__c newTask = new NavTask__c();
+        newTask.CRM_Account__c = accountId;
+        return newTask;
+    }
+
     /**
      * Creates a thread to contain the STO conversation
      * @author Lars Petter Johnsen
      * @date 08.06.2021
      */
     @TestVisible
-    private static Thread__c createThread(Case c, String theme) {
+    private static Thread__c createThread(String relatedObjId, String theme) {
         Thread__c thread = new Thread__c();
-        thread.CRM_Related_Object__c = c.Id;
+        thread.CRM_Related_Object__c = relatedObjId;
         thread.CRM_isPublic__c = true;
         thread.CRM_From__c = UserInfo.getUserId();
         thread.Name = 'Skriv til oss - ' + theme;
         try {
             insert thread;
         } catch (DmlException e) {
-            LoggerUtility logger = new LoggerUtility('Skriv til oss');
             logger.exception(e);
             logger.publish();
         }
