--- a/force-app/main/default/classes/stoHelperClass_Test.cls
+++ b/force-app/main/default/classes/stoHelperClass_Test.cls
@@ -3,6 +3,15 @@ public with sharing class stoHelperClass_Test {
     @TestSetup
     static void makeData() {
         STO_TestDataFactory.createRecord(new Person__c(Name = '12345678910'));
+        STO_TestDataFactory.createRecord(
+            new Person__c(Name = '12345678911', INT_Confidential__c = 'STRENGT_FORTROLIG')
+        );
+        STO_TestDataFactory.createRecord(
+            new Common_Code__c(Name = 'Kontakt NAV', CRM_Code__c = 'KNA', CRM_Code_Set__c = 'Tema')
+        );
+        STO_TestDataFactory.createRecord(
+            new Common_Code__c(Name = 'Spørsmål og Svar', CRM_Code__c = 'SPM_OG_SVR', CRM_Code_Set__c = 'Oppgavetyper')
+        );
     }
 
     @isTest
@@ -64,5 +73,17 @@ public with sharing class stoHelperClass_Test {
         Test.stopTest();
         List<Message__c> msgList = [SELECT Id FROM Message__c WHERE CRM_Thread__c = :threadId];
         System.assertEquals(1, msgList.size());
+    }
+
+    @isTest
+    static void createNavTaskTest() {
+        Thread__c thread = (Thread__c) STO_TestDataFactory.createRecord(new Thread__c());
+        String accountId = [SELECT CRM_Account__c FROM Person__c LIMIT 1]?.CRM_Account__c;
+
+        Test.startTest();
+        stoHelperClass.createNavTask(accountId, thread.Id);
+        Test.stopTest();
+
+        System.assertEquals(1, [SELECT COUNT() FROM NavTask__c]);
     }
 }
